# spectral-select

./: .coveragerc  .gitignore  LICENSE  Lichens - 2.ipynb  Lichens-benchmark.ipynb  README.md  Wavelength_Analysis_Introduction.md  pyproject.toml  pytest.ini  requirements.txt  run_preprocessor.py
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.serena/: project.yml
CODASSCA2026_Submission/: README.md  make_architecture_figure.py  ~$DASSCA2026_Meloyan_ShortPaper.docx
DataLoading/: EEM Analysis.ipynb  Exploration.ipynb  HyperspectralDataLoader.py  eem_toolkit.py
Loader/: FInalProcessor.py  HyperspectralDataLoader.py  LoadData.ipynb  Loading.ipynb  NewProcessing.ipynb  TestLoader.ipynb  process_trq_files.py
MCR-Analysis/: mcr_als.py  mcr_analysis.ipynb
MasterThesis_Narek_Meloyan/: MasterThesis_Narek_Meloyan_Defense.pptx  main.tex  rebuild_collagen_classifiers_image.py  rebuild_collagen_heatmap_image.py
Modeling/: HyperspectralClassificationModels.py
Paper Source/: CHANGE_LOG.md
channel_select/: data.py  protocols.py
docs/: ARCHIVE_MANIFEST.md  CONFIGURATION.md  DATA.md  INSTALLATION.md  QUICKREF.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md
examples/: 00_data_loading.ipynb  01_quickstart.ipynb  02_validation.ipynb
experiments/: README.md  analyze_results.py  collagen_classifier_comparison.py  collagen_full_analysis.py  drop_data_cropped_pipeline.py  drop_data_dim_sweep.py  drop_data_influence_vs_fratio.py  drop_data_inspect.py  drop_data_smoke_test.py  drop_data_snr_rerank.py  export_tiffs.py  export_wavelength_combinations.py  extract_wavelengths.py  general_make_figures.py  general_pamap2_loso.py  general_pamap2_slice.py  generate_figures.py  pepsin_docx_report.py  pepsin_export_tiffs_range.py  pepsin_fix_embedded_figures.py  pepsin_paper_figures.py  poster_arch_ushape_clean.py  poster_v2_architecture_figures.py  reprocess_with_metadata.py  rerun_knn.py  run_master_experiment.py
generalization/: ABSTRACT.md  CHANGELOG.md  EXPLAINER.md  Meloyan_GeneralChannelSelection.docx  RESEARCH_LOG.md  build_abstract_docx.py
manual-utils/: get mask from png.ipynb
mehsi_preprocessor/: __init__.py  __main__.py  app.py  state.py
notebooks/: complete_kiwi_analysis_notebook.ipynb  complete_lichens_2_analysis_notebook.ipynb  complete_lichens_analysis_notebook.ipynb  complete_lime_analysis_notebook.ipynb  lichens_wavelength_selection_pipeline.ipynb
paper/: main.tex
reports/: cae_vs_spectral_ae.py  classification_experiment.py  fpbase_validation.py  spectraforge_validation_report.py
revision/: DROP_DATA_REPORT.md  RESEARCH_LOG.md  SOTA_METHODS_EXPLAINED.md
scripts/: analyze_master_run.py  comprehensive_pipeline.py  export_wavelength_tiffs.py  extract_top_wavelengths.py  full_pipeline_integration_test.py  generate_clean_labels.py  generate_visualizations.py  prepare_lichens_2_for_wavelength_analysis.py  regenerate_figures_no_titles.py  regenerate_robustness_histogram.py  rerun_knn_for_paper.py  run_full_pipeline.py  run_hyperspectral_processing.py  run_lichens_pipeline.py
setupScripts/: ImageJSetup.ipynb
spectral_select/: __init__.py  analyzer.py  config.py  loader.py  results.py  types.py  validation.py  viewer.py  visualizer.py  widgets.py
tests/: __init__.py  conftest.py  test_analyzer_integration.py  (+14 more)
(+593 files in other folders)
