[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-select"
version = "0.1.0"
description = "Autoencoder-based wavelength selection for 4D hyperspectral imaging"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Narek Meloyan"}
]
keywords = [
    "hyperspectral",
    "wavelength-selection",
    "spectral-analysis",
    "machine-learning",
    "autoencoder"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "numpy>=2.0",
    "openpyxl>=3.1",
    "scipy>=1.10",
    "pandas>=2.0",
    "torch>=2.0",
    "scikit-learn>=1.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tifffile>=2023.0",
    "Pillow>=10.0",
    "h5py>=3.0",
    "tqdm>=4.60",
    "kneed>=0.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "nbval>=0.11",
    "jupyterlab>=4.0",
]
gui = [
    "PyQt6>=6.0",
]

[project.urls]
Homepage = "https://github.com/narekmeloyan/spectral-select"
Repository = "https://github.com/narekmeloyan/spectral-select"

[project.scripts]
spectral-select-gui = "mehsi_preprocessor.app:main"
spectraforge-demo = "spectraforge.demo:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["selection_core*", "spectral_select*", "channel_select*", "mehsi_preprocessor*", "spectraforge*"]

[tool.setuptools.package-data]
spectraforge = ["data/*.json"]
